@@ -27,6 +27,9 @@ wubi (11.10) UNRELEASED; urgency=low
   * Use the Plymouth splash (LP: #862007).
   * Handle filesystem corruption when trying to uninstall Wubi
     (LP: #869014).
+  * Add support for disk image installation (LP: #859696). Thanks
+    Jean-Baptiste Lallement!
+  * Correctly define cd_path (LP: #861702).
 
  -- Colin Watson <cjwatson@ubuntu.com>  Tue, 03 May 2011 21:57:25 +0100
 
